# FemtoNote

./: .gitignore  README.md  index.html  package-lock.json  package.json  project-descriptor.md  vite.config.js
scripts/: make-icon.mjs
src/: App.svelte  app.css  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: Editor.svelte  MenuBar.svelte
src/lib/: api.js  appwindows.js  editor.js  routing.js
src/windows/: ConfigWindow.svelte  ExportWindow.svelte
