[package]
name = "bandnote"
version = "0.1.0"
description = "Schedule-aware, low-friction note capture for students."
authors = ["Bandnote"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "bandnote_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
